publications - publications categorie dans la partie admin - home -Event dans la partie admin

--- a/src/GCF/FrontBundle/Resources/views/Default/Publications/publications.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Publications/publications.html.twig
@@ -18,12 +18,22 @@
             color: #22AA86;
         }
 
+        #catPub-0{
+            text-align: center;
+        }
+
         #green_blogger_pub_tab_container {
             display: none;
+        }
+        #catPub-1{
+            text-align: center;
         }
 
         #autres_pub_tab_container{
             display:none;
+        }
+        #catPub-2{
+            text-align: center;
         }
         .nav_our_and_green_blogger li a h2{
             font-weight: inherit ;
@@ -46,9 +56,12 @@
     <div>
         <div class="col-md-12">
             <ul class="nav nav-tabs nav_our_and_green_blogger">
-                <li class="active" id="our_pub_tab"><a><h2>Nos Publications</h2></a></li>
-                <li id="green_blogger_pub_tab"><a><h2>Green bloggeur Publications</h2></a></li>
-                <li id="autres_pub_tab"><a><h2>Autres</h2></a></li>
+                {#<li class="active" id="our_pub_tab"><a><h2>Nos Publications</h2></a></li>#}
+                {#<li class="" id="green_blogger_pub_tab"><a><h2>Green bloggeur Publications</h2></a></li>#}
+                {#<li class="" id="autres_pub_tab"><a><h2>Autres</h2></a></li>#}
+                {% for key, catPub in catsPub %}
+                    <li id="catPub-{{ key }}"><a><h2>{{ catPub.nom }}</h2></a></li>
+                {% endfor %}
                 <div class="navbar-right">
                     <a class="btn btn-default" onclick="showGBpopup()">+ Green Blogger</a>
                 </div>
@@ -57,14 +70,14 @@
 
         <div id="our_pub_tab_container">
 
-            {% for publication in publications %}
+            {% for publication in nospublications %}
 
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style="background: whitesmoke;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
                         <div class="col-md-5">
                             <a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" title="{{ publication.titre }}">
-                                <img src="http://placehold.it/200x200" class="img-responsive" style="width: 100%;"  alt="title="{{ publication.titre }}"" />
+                                <img src="http://placehold.it/200x200" class="img-responsive" style="width: 100%;"  alt="{{ publication.titre }}" title="{{ publication.titre }}" />
                             </a>
                         </div>
                         <div class="col-md-7">
@@ -72,7 +85,7 @@
                             <h6><strong>Date :</strong> 2009</h6>
                             <p class="description" style="font-size: 13px;">{{ publication.contenu|slice(0, 62) }}...</p>
                             <p style="width: 100%; text-align: right">
-                                <a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" class="button_see_more">Lire la suite. </a>
+                                <a href="{{ path('gcf_front_single_publications_page',{'id': publication.id}) }}" title="{{ publication.titre }}" class="button_see_more">Lire la suite. </a>
                             </p>
                         </div>
                     </div>
@@ -83,24 +96,29 @@
         </div>
 
         <div id="green_blogger_pub_tab_container">
-            {% for i in 0..10 %}
 
+            {% for gbpublication in gbpublications %}
 
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style="background: #f2fffc;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
                         <div class="col-md-5">
-                            <a href="#" title="Titre">
-                                <img src="http://placehold.it/200x200" class="img-responsive" alt="Titre"/>
+                            <a href="{{ path('gcf_front_single_publications_page',{'id': gbpublication.id}) }}" title="{{ gbpublication.titre }}">
+                                <img src="http://placehold.it/200x200" class="img-responsive" alt="{{ gbpublication.titre }}" title="{{ gbpublication.titre }}"/>
                             </a>
                         </div>
                         <div class="col-md-7">
-                            <h4><a href="#" class="post_title" title="Titre">Publication Titre</a></h4>
+                            <h4>
+                                <a href="{{ path('gcf_front_single_publications_page',{'id': gbpublication.id}) }}" class="post_title" title="{{ gbpublication.titre }}">
+                                    {{ gbpublication.titre }}
+                                </a>
+                            </h4>
                             <h6><strong>Date :</strong> 2009</h6>
-                            <p class="description" style="font-size: 13px;">Aenean tortor est, vulputate quis leo in,
-                                vehicula rhoncus lacus.</p>
+                            <p class="description" style="font-size: 13px;">
+                                {{ gbpublication.contenu|slice(0, 62) }}...
+                            </p>
                             <p style="width: 100%; text-align: right">
-                                <a href="#" style="padding: 5px; background: #22AA86; color: white; text-decoration: none">
+                                <a href="{{ path('gcf_front_single_publications_page',{'id': gbpublication.id}) }}" title="{{ gbpublication.titre }}" class="button_see_more">
                                     Lire la suite. </a>
                             </p>
                         </div>
@@ -111,23 +129,24 @@
         </div>
 
         <div id="autres_pub_tab_container">
-            {% for i in 0..10 %}
+            {% for autrespublication in autrespublications %}
 
                 <div class="col-md-6 col-sm-6 col-xs-12"
                      style=" background: rgba(255,239,0,0.1);border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
                         <div class="col-md-5">
-                            <a href="#" title="TITRE">
-                                <img src="http://placehold.it/200x200" class="img-responsive" alt="TITRE" />
+                            <a href="{{ path('gcf_front_single_publications_page',{'id': autrespublication.id}) }}" title="{{ autrespublication.titre }}">
+                                <img src="http://placehold.it/200x200" class="img-responsive" alt="{{ autrespublication.titre }}" />
                             </a>
                         </div>
                         <div class="col-md-7">
-                            <h4 class="post_title"><a href="#" title="TITRE">Publication {{ i }} Titre</a></h4>
+                            <h4 class="post_title"><a href="{{ path('gcf_front_single_publications_page',{'id': autrespublication.id}) }}" title="{{ autrespublication.titre }}">{{ autrespublication.titre }}</a></h4>
                             <h6 class="name"><strong>Date :</strong> 2009</h6>
-                            <p class="description" style="font-size: 13px;">Aenean tortor est, vulputate quis leo in,
-                                vehicula rhoncus lacus.</p>
+                            <p class="description" style="font-size: 13px;">
+                                {{ autrespublication.contenu|slice(0, 62) }}...
+                            </p>
                             <p style="width: 100%; text-align: right">
-                                <a href="#" style="padding: 5px; background: rgba(255,239,0,0.4); color: white; text-decoration: none">
+                                <a href="{{ path('gcf_front_single_publications_page',{'id': autrespublication.id}) }}" title="{{ autrespublication.titre }}" class="button_see_more" >
                                     Lire la suite. </a>
                             </p>
                         </div>
@@ -142,39 +161,41 @@
 
 {% block javascripts %}
 <script>
-    jQuery('#our_pub_tab').click(function () {
+    jQuery('#catPub-0').addClass('active');
+
+    jQuery('#catPub-0').click(function () {
 
         jQuery('#our_pub_tab_container').css('display', 'block');
         jQuery('#green_blogger_pub_tab_container').css('display', 'none');
         jQuery('#autres_pub_tab_container').css('display', 'none');
 
-        jQuery('#our_pub_tab').addClass('active');
-        jQuery('#green_blogger_pub_tab').removeClass('active');
-        jQuery('#autres_pub_tab').removeClass('active');
+        jQuery('#catPub-0').addClass('active');
+        jQuery('#catPub-1').removeClass('active');
+        jQuery('#catPub-2').removeClass('active');
 
     });
 
-    jQuery('#green_blogger_pub_tab').click(function () {
+    jQuery('#catPub-1').click(function () {
 
         jQuery('#green_blogger_pub_tab_container').css('display', 'block');
         jQuery('#our_pub_tab_container').css('display', 'none');
         jQuery('#autres_pub_tab_container').css('display', 'none');
 
-        jQuery('#green_blogger_pub_tab').addClass('active');
-        jQuery('#our_pub_tab').removeClass('active');
-        jQuery('#autres_pub_tab').removeClass('active');
+        jQuery('#catPub-1').addClass('active');
+        jQuery('#catPub-0').removeClass('active');
+        jQuery('#catPub-2').removeClass('active');
 
     });
 
-    jQuery('#autres_pub_tab').click(function () {
+    jQuery('#catPub-2').click(function () {
 
         jQuery('#autres_pub_tab_container').css('display', 'block');
         jQuery('#green_blogger_pub_tab_container').css('display', 'none');
         jQuery('#our_pub_tab_container').css('display', 'none');
 
-        jQuery('#autres_pub_tab').addClass('active');
-        jQuery('#our_pub_tab').removeClass('active');
-        jQuery('#green_blogger_pub_tab').removeClass('active');
+        jQuery('#catPub-2').addClass('active');
+        jQuery('#catPub-0').removeClass('active');
+        jQuery('#catPub-1').removeClass('active');
 
     });
 
