--- a/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
@@ -85,16 +85,19 @@
             {% for i in 0..4 %}
 
 
-                <div class="col-md-6 col-sm-6 col-xs-12"
+                <div class="col-md-12 col-xs-12"
                      style="background: #f2fffc;border: solid white; padding-top: 10px; padding-bottom:10px ">
                     <div class="row">
-                        <div class="col-md-5" style="padding: 0 "><a href="#"><iframe   style="max-width: 100%;max-height: 100%" src="https://www.youtube.com/embed/NBRLeyI9Dfk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></a></div>
+                        <div class="col-md-5" style="padding: 0 ">
+                            <iframe   style="max-width: 100%;max-height: 100%;width: 100%; height:200px;" src="https://www.youtube.com/embed/NBRLeyI9Dfk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
 
                         <div class="col-md-7">
                             <h4 class="name">Publication Titre</h4>
                             <h6 class="name"><strong>Date :</strong> 2009</h6>
                             <p class="description" style="font-size: 13px;">Aenean tortor est, vulputate quis leo in,
-                                vehicula rhoncus lacus.</p>
+                                vehicula rhoncus lacus.Aenean tortor est, vulputate quis leo in,
+                                vehicula rhoncus lacus</p>
                         </div>
                     </div>
                 </div>
