--- a/src/GCF/FrontBundle/Resources/views/Default/Publications/single-publication.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Publications/single-publication.html.twig
@@ -4,39 +4,20 @@
 
 {% block body %}
 
-{{ dump(publication) }}
+{#{{ dump(publication) }}#}
+<div class="col-md-12">
 
-    <div class="col-md-12">
-        <table class="table table-striped table-bordered col-md-12">
-            <tbody>
-                <tr>
-                    <td class="col-md-6"><b>ID</b></td>
-                    <td class="col-md-6">{{ publication.id }}</td>
-                </tr>
-                <tr>
-                    <td class="col-md-6"><b>Titre</b></td>
-                    <td class="col-md-6">{{ publication.titre }}</td>
-                </tr>
-                <tr>
-                    <td class="col-md-6"><b>Contenu</b></td>
-                    <td class="col-md-6">{{ publication.contenu }}</td>
-                </tr>
-                <tr>
-                    <td class="col-md-6"><b>Projet</b></td>
-                    <td class="col-md-6">
-                        {% if publication.projet is null %}
-                            -----
-                        {% else %}
-                            {{ publication.projet.nom }}
-                        {% endif %}
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-6"><b>Email Bloggeur</b></td>
-                    <td class="col-md-6">{{ publication.emailBloggeur }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    <h2>{{ publication.titre }}</h2>
+
+    {% if publication.categorie.id == 2  %}
+        {{ publication.emailBloggeur }}
+    {% endif %}
+    {% if publication.projet %}
+        {{ publication.projet.nom }}
+    {% endif %}
+
+    <p>{{ publication.contenu }}</p>
+
+</div>
 {% endblock %}
 
