--- a/src/GCF/FrontBundle/Resources/views/Default/blocks/gb-popoup.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/blocks/gb-popoup.html.twig
@@ -1,62 +1,3 @@
-<div class="gb_page_overlay" onclick="closeGBPopup()">
-</div>
-<div class="gb_popup_details_container">
-    <i class="fa fa-times-circle close_popup" aria-hidden="true" onclick="closeGBPopup()"></i>
-    <div class="gb_popup_details_container_inner">
-
-        <div >
-            <h2><strong><center>Green Blogger</center></strong></h2>
-            <form id="gb_posts_form" class="form-horizontal" method="post">
-                <div class="form-group">
-                    <label class="control-label col-sm-12" for="gb_name">Nom:</label>
-                    <div class="col-sm-12">
-                        <input type="text" class="form-control" id="gb_name" placeholder="Enter votre nom" name="gb_name" required>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label col-sm-12" for="gb_email">Email:</label>
-                    <div class="col-sm-12">
-                        <input type="email" class="form-control" id="gb_email" placeholder="Entrer votre email" name="gb_email" required>
-                    </div>
-                </div>
-                <h3><center><strong>Article</strong></center></h3>
-                <div class="form-group">
-                    <label class="control-label col-sm-12" for="gb_article_title">Title:</label>
-                    <div class="col-sm-12">
-                        <input type="text" class="form-control" id="gb_article_title" placeholder="" name="gb_article_title" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-12" for="gb_article_content">Content:</label>
-                    <div class="col-sm-12">
-                        <textarea class="form-control" rows="10" name="gb_article_content" id="gb_article_content" required></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-12" for="gb_article_project">Projet:</label>
-                    <div class="col-sm-12">
-                        <select class="form-control" id="gb_article_project" name="gb_article_project">
-                            <option></option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class=" col-sm-12">
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </div>
-                </div>
-            </form>
-            <div id="notif_pub"></div>
-
-        </div>
-
-    </div>
-</div>
 <style>
     /*green blogger form popup*/
     .gb_page_overlay{
@@ -119,3 +60,64 @@
     #notif_pub.success{background: green !important; color:white;}
     #notif_pub.error{background: red !important; color:white;}
 </style>
+
+<div class="gb_page_overlay" onclick="closeGBPopup()">
+</div>
+<div class="gb_popup_details_container">
+    <i class="fa fa-times-circle close_popup" aria-hidden="true" onclick="closeGBPopup()"></i>
+    <div class="gb_popup_details_container_inner">
+
+        <div >
+            <h2><strong><center>Green Blogger</center></strong></h2>
+            <form id="gb_posts_form" class="form-horizontal" method="post">
+                <div class="form-group">
+                    <label class="control-label col-sm-12" for="gb_name">Nom:</label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control" id="gb_name" placeholder="Enter votre nom" name="gb_name" required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-12" for="gb_email">Email:</label>
+                    <div class="col-sm-12">
+                        <input type="email" class="form-control" id="gb_email" placeholder="Entrer votre email" name="gb_email" required>
+                    </div>
+                </div>
+                <h3><center><strong>Article</strong></center></h3>
+                <div class="form-group">
+                    <label class="control-label col-sm-12" for="gb_article_title">Title:</label>
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control" id="gb_article_title" placeholder="" name="gb_article_title" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-12" for="gb_article_content">Content:</label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" rows="10" name="gb_article_content" id="gb_article_content" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-12" for="gb_article_project">Projet:</label>
+                    <div class="col-sm-12">
+                        <select class="form-control" id="gb_article_project" name="gb_article_project">
+                            <option value=""></option>
+                            {% for project in projects %}
+                            <option value="{{ project.id }}">{{ project.nom }}</option>
+                            {% endfor %}
+
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class=" col-sm-12">
+                        <button type="submit" class="btn btn-default">Envoyer</button>
+                    </div>
+                </div>
+            </form>
+            <div id="notif_pub"></div>
+
+        </div>
+
+    </div>
+</div>
