--- a/src/GCF/FrontBundle/Resources/views/Default/contact.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/contact.html.twig
@@ -15,6 +15,7 @@
             background: whitesmoke;
             padding-top: 60px;
             margin-top: 40px;
+            border-radius: 2px;
         }
         .contact_card_container .btn.btn-primary{
             background-color: #7ac943 !important;
@@ -99,7 +100,7 @@
             </form>
 
             <div class="center-on-small-only">
-                <a class="btn btn-primary" onclick="submitForm()">Envoyer</a>
+                <input type="submit"  class="btn btn-primary" onclick="submitForm()" value="Envoyer" >
             </div>
 
             <div id="sending_status"></div>
