font family - style

--- a/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
@@ -75,8 +75,8 @@
     <div>
         <div class="col-md-12">
             <ul class="nav nav-tabs navigation_elearning">
-                <li class="active col-md-6" id="technique_tab"><a >Technique</a></li>
-                <li class="col-md-6" id="legislatives_tab"><a >Législatives</a></li>
+                <li class="active" id="technique_tab"><a >Technique</a></li>
+                <li class="" id="legislatives_tab"><a >Législatives</a></li>
             </ul>
         </div>
 
