--- a/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
@@ -27,6 +27,15 @@
             padding-left: 10px;
             background: #22AA86;
             color: white;
+            font-size: 30px;
+        }
+
+        .name{
+            font-size: 18px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+
+            font-weight:600;
         }
 
         .projects_news .theme { font-size: 13px; margin: 0 }
@@ -71,14 +80,14 @@
         }
 
         @media screen and (max-width: 440px){
-            .single_element_desc_container h4{ font-size: 17px; font-weight: 600; margin: 5px 0;}
+            .single_element_desc_container h2{ font-size: 17px; font-weight: 600; margin: 5px 0;}
             .projects_news .theme{font-size: 12px;}
             .projects_news .description{font-size: 12px;}
 
         }
 
         @media screen and ( min-width: 989px ) and ( max-width: 1200px ){
-            .single_element_desc_container h4{ margin: 5px 0 }
+            .single_element_desc_container h2{ margin: 5px 0 }
         }
 
         .btn-default.filter-button{ border-color: transparent; outline: none ;    margin-bottom: 10px;}
@@ -124,7 +133,7 @@
             <div class="col-md-6 col-sm-6 single_item "
                  style="background: #f7f7f7;border: solid 2px white; padding: 10px">
                 <div class="intro">
-                    <h2 class="section_title">Actualités</h2>
+                    <h1 class="section_title">Actualités</h1>
                 </div>
                 <div class="col-sm-12 item single_element">
                     <div class="row">
@@ -134,7 +143,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h2 class="name">Project Name</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -148,7 +157,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h2 class="name">Project Name</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -162,7 +171,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Project Name</h4>
+                            <h2 class="name">Project Name</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -177,7 +186,7 @@
             <div class="col-md-6 col-sm-6 single_item "
                  style="background: #f7f7f7;border: solid 2px white; padding: 10px">
                 <div class="intro">
-                    <h2 class="section_title">Evénements</h2>
+                    <h1 class="section_title">Evénements</h1>
                 </div>
                 <div class="col-sm-12 item single_element">
                     <div class="row">
@@ -187,7 +196,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Evénement 1</h4>
+                            <h2 class="name">Evénement 1</h2>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pr...</p>
@@ -202,7 +211,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Evénement 2</h4>
+                            <h2 class="name">Evénement 2</h2>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pra...</p>
@@ -217,7 +226,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Evénement 3</h4>
+                            <h2 class="name">Evénement 3</h2>
                             <p class="theme"><strong>Date:</strong> 11-12-2000</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Pra...</p>
@@ -233,7 +242,7 @@
             <div class="col-md-6 col-sm-6 single_item "
                  style="background: #f7f7f7;border: solid 2px white; padding: 10px">
                 <div class="intro">
-                    <h2 class="section_title">Documents</h2>
+                    <h1 class="section_title">Documents</h1>
                 </div>
                 <div class="col-sm-12 item single_element">
                     <div class="row">
@@ -243,7 +252,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Document 1</h4>
+                            <h2 class="name">Document 1</h2>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Prae...</p>
@@ -258,7 +267,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Document 2</h4>
+                            <h2 class="name">Document 2</h2>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Prae...</p>
@@ -273,7 +282,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Document 3</h4>
+                            <h2 class="name">Document 3</h2>
                             <p class="theme"><strong>Sector:</strong> Energie</p>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praes...</p>
@@ -289,7 +298,7 @@
             <div class="col-md-6 col-sm-6 single_item "
                  style="background: #f7f7f7;border: solid 2px white; padding: 10px">
                 <div class="intro">
-                    <h2 class="section_title">Vidéos</h2>
+                    <h1 class="section_title">Vidéos</h1>
                 </div>
                 <div class="col-sm-12 item single_element">
                     <div class="row">
@@ -299,7 +308,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Vidéos 1</h4>
+                            <h2 class="name">Vidéos 1</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -313,7 +322,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Vidéos 2</h4>
+                            <h2 class="name">Vidéos 2</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -327,7 +336,7 @@
                             </a>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-9 single_element_desc_container">
-                            <h4 class="name">Vidéos 3</h4>
+                            <h2 class="name">Vidéos 3</h2>
                             <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus.
                                 Praesent aliquam in tellus eu gravi...</p>
                         </div>
@@ -345,7 +354,7 @@
     <div class="col-md-12 col-sm-12" style="margin-bottom: 50px; padding: 0; min-height: 440px;">
         <div class="projects-horizontal">
             <div class="intro">
-                <h2 class="section_art_pub_title">Publications</h2>
+                <h1 class="section_title">Publications</h1>
             </div>
             <div class="projects">
                 <div align="center">
@@ -364,7 +373,7 @@
                                 </a>
                             </div>
                             <div class="col">
-                                <h4 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': nospublication.id }) }}">{{ nospublication.titre }}</a></h4>
+                                <h2 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': nospublication.id }) }}">{{ nospublication.titre }}</a></h2>
                                 <p class="description">Aenean tortor est, vulputate quis leo
                                     in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p>
                             </div>
@@ -381,7 +390,7 @@
                                 </a>
                             </div>
                             <div class="col">
-                                <h4 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': gbpublication.id }) }}">{{ gbpublication.titre }}</a></h4>
+                                <h2 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': gbpublication.id }) }}">{{ gbpublication.titre }}</a></h2>
                                 <p class="description">Aenean tortor est, vulputate quis leo
                                     in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p>
                             </div>
@@ -398,7 +407,7 @@
                                 </a>
                             </div>
                             <div class="col">
-                                <h4 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': autrespublication.id }) }}">{{ autrespublication.titre }}</a></h4>
+                                <h2 class="name"><a href="{{ path('gcf_front_single_publications_page',{'id': autrespublication.id }) }}">{{ autrespublication.titre }}</a></h2>
                                 <p class="description">Aenean tortor est, vulputate quis leo
                                     in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p>
                             </div>
